Fix bug related to list
Don't bring default-ul CSS back to the whole site, since nav menu uses ul and expands
a little too much. Bring back default-ul CSS only for section3, where it is needed.

--- a/source/assets_site/stylesheets/_index.css.scss
+++ b/source/assets_site/stylesheets/_index.css.scss
@@ -206,6 +206,10 @@ body.index {
         text-align: left;
       }
     }
+
+    ul {
+      @extend %default-ul;
+    }
   }
 
   .section5 {
