--- a/source/assets_site/stylesheets/base/_typography.scss
+++ b/source/assets_site/stylesheets/base/_typography.scss
@@ -85,7 +85,3 @@ picture {
 b {
   font-weight: bold;
 }
-
-ul {
-  @extend %default-ul;
-}
